@@ -1,3 +1,6 @@
+pl 27
+	- (temporarily?) removed findcursor* t*mat*
+
 pl 26
 	- docxx 3.0
 
